# uv-copier-template

./: .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  copier.yml  ctt.toml  pyproject.toml
extensions/: __init__.py  context.py
project/: CONTRIBUTING.md.jinja  README.md.jinja  pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
project/scripts/: install-ipykernel.sh.jinja  uninstall-ipykernel.sh.jinja  {% if advent_of_code %}make-all-nbs.sh{% endif %}.jinja  {% if advent_of_code %}make-all-pys.sh{% endif %}.jinja
project/src/{{python_package_import_name}}/: __about__.py.jinja  __init__.py.jinja  {% if advent_of_code %}aoc_script.py{% endif %}.jinja
scripts/: check-version.py
scripts/typecheck/: check-mypy.sh  check-pyright.sh  install-types.sh
src/uv_copier_template/: __init__.py  extensions.py
template/: pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
tests/: conftest.py  helpers.py  test_copier_yml.py  test_extensions.py
typings/plumbum/: __init__.pyi  _typing.pyi  cmd.pyi  lib.pyi  version.pyi
typings/plumbum/commands/: __init__.pyi  base.pyi  daemons.pyi  modifiers.pyi  processes.pyi
typings/plumbum/machines/: __init__.pyi  _windows.pyi  base.pyi  env.pyi  local.pyi  remote.pyi  session.pyi  ssh_machine.pyi
typings/plumbum/path/: __init__.pyi  base.pyi  local.pyi  remote.pyi  utils.pyi
