[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copier-base"
version = "2024.10.1"
description = "copier base template for python projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
